--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,13 +21,16 @@
 # ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 # OTHER DEALINGS IN THE SOFTWARE.
 #
-name: Python (docs)
+name: publish docs with release
 
-on: [push]
+on:  
+  release:
+    types:
+      - published
 
 jobs:
-  nox:
-    name: Docs
+  generate_publish_docs:
+    name: generate docs with nox/sphinx and publish with mike
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -44,5 +47,19 @@ jobs:
       env:
         GIT_REPO_NAME: "${GITHUB_REPOSITORY#*/}"
       run: |
-        pip install .[ci]
+        pip install .[ci,docs]
         nox -e docs
+
+    - name: configure git user for bot commits
+      run: |
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+
+    - name: deploy docs with mike 🚀 and set as latest
+      run: |
+        mike deploy -F mkdocs.yml -b gh-pages --push --update-aliases ${{ github.ref_name}} latest
+        mike set-default -F mkdocs.yml -b gh-pages --push latest
+
+    - name: list doc versions 🚀
+      run: |
+        mike list -F mkdocs.yml -b gh-pages
