--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ docs = [
     'sphinx~=5.3.0',
     'sphinx-click~=4.4.0',
     'sphinx-markdown-builder~=0.5.5',
+    'mkdocs~=1.4.2',
 ]
 lint = [
     'darglint~=1.8.1',
