--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,7 +23,10 @@
 #
 name: Python (docs)
 
-on: [push]
+on:  
+  push:
+    tags:
+      - '*'
 
 jobs:
   nox:
@@ -44,5 +47,19 @@ jobs:
       env:
         GIT_REPO_NAME: "${GITHUB_REPOSITORY#*/}"
       run: |
-        pip install .[ci]
+        pip install .[ci,docs]
         nox -e docs
+
+    - name: configure git user for bot commits
+      run: |
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+
+    - name: deploy docs with mike 🚀 and set as latest
+      run: |
+        mike deploy -F mkdocs.yml -b gh-pages --push --update-aliases ${{ github.ref_name}} latest
+        mike set-default -F mkdocs.yml -b gh-pages --push latest
+
+    - name: list doc versions 🚀
+      run: |
+        mike list -F mkdocs.yml -b gh-pages
