--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -52,14 +52,7 @@ jobs:
 
     - name: configure git user for bot commits
       run: |
+        git remote -v
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
 
-    - name: deploy docs with mike 🚀 and set as latest
-      run: |
-        mike deploy -F mkdocs.yml -b gh-pages --push --update-aliases ${{ github.ref_name}} latest
-        mike set-default -F mkdocs.yml -b gh-pages --push latest
-
-    - name: list doc versions 🚀
-      run: |
-        mike list -F mkdocs.yml -b gh-pages
